one more manual pred run

--- a/src/01-module/iris-batch-inference-pipeline.ipynb
+++ b/src/01-module/iris-batch-inference-pipeline.ipynb
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 50,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 51,
    "metadata": {
     "id": "uHuAD3ttP8Ep"
    },
@@ -112,7 +112,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Finished: Reading data from Hopsworks, using ArrowFlight (0.73s) \n"
+      "Finished: Reading data from Hopsworks, using ArrowFlight (73.87s) \n"
      ]
     },
     {
@@ -147,11 +147,11 @@
        "       'Versicolor', 'Setosa', 'Setosa', 'Virginica', 'Versicolor',\n",
        "       'Versicolor', 'Setosa', 'Setosa', 'Versicolor', 'Setosa',\n",
        "       'Virginica', 'Setosa', 'Setosa', 'Versicolor', 'Virginica',\n",
-       "       'Virginica', 'Virginica', 'Setosa', 'Versicolor', 'Versicolor'],\n",
-       "      dtype=object)"
+       "       'Virginica', 'Virginica', 'Setosa', 'Versicolor', 'Versicolor',\n",
+       "       'Setosa'], dtype=object)"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -243,13 +243,6 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>146</th>\n",
-       "      <td>6.500000</td>\n",
-       "      <td>3.000000</td>\n",
-       "      <td>5.500000</td>\n",
-       "      <td>1.800000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>147</th>\n",
        "      <td>6.400000</td>\n",
        "      <td>2.800000</td>\n",
@@ -277,9 +270,16 @@
        "      <td>4.881264</td>\n",
        "      <td>1.835901</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>151</th>\n",
+       "      <td>5.367117</td>\n",
+       "      <td>4.434446</td>\n",
+       "      <td>1.374910</td>\n",
+       "      <td>0.497858</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>151 rows × 4 columns</p>\n",
+       "<p>152 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -290,16 +290,16 @@
        "3        6.000000     2.900000      4.500000     1.500000\n",
        "4        5.000000     3.000000      1.600000     0.200000\n",
        "..            ...          ...           ...          ...\n",
-       "146      6.500000     3.000000      5.500000     1.800000\n",
        "147      6.400000     2.800000      5.600000     2.100000\n",
        "148      5.000000     3.400000      1.600000     0.400000\n",
        "149      5.732203     2.366797      3.115597     1.155345\n",
        "150      7.768135     3.645254      4.881264     1.835901\n",
+       "151      5.367117     4.434446      1.374910     0.497858\n",
        "\n",
-       "[151 rows x 4 columns]"
+       "[152 rows x 4 columns]"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -330,14 +330,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Finished: Reading data from Hopsworks, using ArrowFlight (0.61s) \n"
+      "Finished: Reading data from Hopsworks, using ArrowFlight (0.64s) \n"
      ]
     },
     {
@@ -418,14 +418,6 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>146</th>\n",
-       "      <td>6.500000</td>\n",
-       "      <td>3.000000</td>\n",
-       "      <td>5.500000</td>\n",
-       "      <td>1.800000</td>\n",
-       "      <td>Virginica</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>147</th>\n",
        "      <td>6.400000</td>\n",
        "      <td>2.800000</td>\n",
@@ -457,9 +449,17 @@
        "      <td>1.835901</td>\n",
        "      <td>Virginica</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>151</th>\n",
+       "      <td>5.367117</td>\n",
+       "      <td>4.434446</td>\n",
+       "      <td>1.374910</td>\n",
+       "      <td>0.497858</td>\n",
+       "      <td>Setosa</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>151 rows × 5 columns</p>\n",
+       "<p>152 rows × 5 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -470,16 +470,16 @@
        "3        6.000000     2.900000      4.500000     1.500000  Versicolor\n",
        "4        5.000000     3.000000      1.600000     0.200000      Setosa\n",
        "..            ...          ...           ...          ...         ...\n",
-       "146      6.500000     3.000000      5.500000     1.800000   Virginica\n",
        "147      6.400000     2.800000      5.600000     2.100000   Virginica\n",
        "148      5.000000     3.400000      1.600000     0.400000      Setosa\n",
        "149      5.732203     2.366797      3.115597     1.155345  Versicolor\n",
        "150      7.768135     3.645254      4.881264     1.835901   Virginica\n",
+       "151      5.367117     4.434446      1.374910     0.497858      Setosa\n",
        "\n",
-       "[151 rows x 5 columns]"
+       "[152 rows x 5 columns]"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -492,16 +492,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Virginica'"
+       "'Setosa'"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -513,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -526,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -541,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -563,10 +563,10 @@
     {
      "data": {
       "text/plain": [
-       "(<hsfs.core.job.Job at 0x29389f710>, None)"
+       "(<hsfs.core.job.Job at 0x2938ecf80>, None)"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
